fixed the scrollbug due to wrong positioning on logout button

--- a/src/components/chat/chatComponents/rightPanel/rightPartPanel.css
+++ b/src/components/chat/chatComponents/rightPanel/rightPartPanel.css
@@ -1,18 +1,18 @@
 .chatRightPanel {
   height: 100vh;
-  width: 100px;
+  width: 25.4vw;
   background-color: #19183f;
 }
 
 .logoutBox {
-  text-align: center;
+  position: relative;
   height: 53px;
   border-bottom: 2px solid var(--light);
 }
 .logoutBox span {
-  position: relative;
-  top: 2vh;
-  left: 8vw;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   font-size: 20px;
   color: var(--light);
   text-decoration: none;
